[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/theme/ButtonTheme.tres" type="Theme" id=1]
[ext_resource path="res://assets/icons/mascot.png" type="Texture" id=2]
[ext_resource path="res://page/instruction/instruction.gd" type="Script" id=3]
[ext_resource path="res://art/instruction/home.ogg" type="AudioStream" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.764706 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.0478516
anchor_top = 0.0816667
anchor_right = 0.441406
anchor_bottom = 0.828333
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.463867
anchor_top = 0.573333
anchor_right = 0.922852
anchor_bottom = 0.833333
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Text" type="RichTextLabel" parent="Panel"]
anchor_left = 0.0914894
anchor_top = 0.0769231
anchor_right = 0.902128
anchor_bottom = 0.923077
margin_top = -9.53674e-07
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Ici serons afficher les instruction
Ici serons afficher les instruction
Ici serons afficher les instruction"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.799805
anchor_top = 0.9
anchor_right = 0.982422
anchor_bottom = 0.968333
theme = ExtResource( 1 )
text = "Passer"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ListenInstruction" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
